# textplayer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml  publish.yml
src/: command_result.rs  commands.rs  dfrotz.rs  formatters.rs  gamefile.rs  lib.rs  main.rs  savefile.rs  session.rs
